--- a/requirements.txt
+++ b/requirements.txt
@@ -31,27 +31,12 @@ tzlocal==5.2
 ujson==5.8.0  # Faster JSON parsing
 orjson==3.9.10  # Alternative JSON parser
 
-# Testing and development
-pytest==8.0.0
-pytest-asyncio==0.23.5
-pytest-cov==4.1.0
-pytest-mock==3.12.0
-pytest-xdist==3.5.0
-hypothesis==6.92.6
-
-# Documentation
-sphinx==7.2.6
-sphinx-rtd-theme==1.3.0
-myst-parser==2.0.0
-
-# Linting and formatting
-black==23.12.1
-flake8==6.1.0
-isort==5.13.2
-mypy==1.7.1
-
 # Platform-specific dependencies
 pywin32==306; sys_platform == 'win32'
 deepmerge==1.1.0
 jsonschema==4.19.1
 pydantic==2.5.2
+
+# Development/test/linting dependencies have been moved to requirements-dev.txt
+# Install dev dependencies with:
+#   pip install -r requirements-dev.txt
