--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Core dependencies
 ccxt==4.2.85
-pandas==2.1.4
+pandas>=2.2.0
 numpy==1.26.2
 python-dotenv==1.0.0
 
@@ -11,7 +11,7 @@ joblib==1.3.2
 
 # Async and networking
 aiohttp==3.9.0
-requests==2.31.0
+requests>=2.32.0
 websockets==12.0
 
 # UI and visualization
