--- a/requirements.txt
+++ b/requirements.txt
@@ -15,10 +15,19 @@ requests>=2.32.0
 websockets==12.0
 
 # UI and visualization
-rich==13.7.0
 colorama==0.4.6
 streamlit==1.28.0
 plotly==5.18.0
+
+# Web API
+fastapi==0.104.1
+uvicorn==0.24.0
+sqlalchemy==2.0.43
+databases[sqlite]==0.9.0
+prometheus-client==0.22.1
+jinja2==3.1.6
+aiofiles==24.1.0
+python-multipart==0.0.20
 
 # Notifications
 discord.py==2.3.2
