--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,8 @@ prometheus-client==0.22.1
 jinja2==3.1.6
 aiofiles==24.1.0
 python-multipart==0.0.20
+slowapi==0.1.9
+redis==5.0.1
 
 # Notifications
 discord.py==2.3.2
