Add comprehensive tests for core types and enums; include TradingMode, OrderType, OrderStatus, and Order dataclass
- Implemented unit tests for TradingMode enum, validating values, names, iteration, membership, and error handling.
- Added tests for OrderType enum, covering expected values, names, iteration, membership, and error handling.
- Created tests for OrderStatus enum, ensuring correct values, names, iteration, membership, and error handling.
- Developed tests for Order dataclass, including creation with minimal and complete fields, equality comparison, string representation, and mutability checks.
- Included tests for importing types from core.types module and backward compatibility.
- Added training results JSON file with metadata, class distribution, fold metrics, and mean performance statistics.

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,9 @@ tmp/
 *.jsonl
 *.db
 *.sqlite
+*.png
+error.txt
+.market_cache/
 
 # --- Trading Bot specific ---
 output/
@@ -61,6 +64,9 @@ checkpoints/
 .test_cache/
 scrips/
 tools/
+error.txt
+test_logs/
+
 
 # --- Machine Learning models ---
 *.h5
