--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ python-dotenv==1.0.0
 # Data analysis and ML (for future phases)
 scikit-learn==1.3.2
 xgboost==2.0.2
+lightgbm==4.1.0
 joblib==1.3.2
+arch==6.3.0  # For GARCH volatility modeling
 
 # Async and networking
 aiohttp==3.9.0
