Add cross-pair validation demo script and associated tests
- Implemented demo script for cross-pair validation functionality in `demo_cross_pair_validation.py`.
- Created sample data generation for multiple trading pairs (BTC/USDT, ETH/USDT, SOL/USDT).
- Integrated WalkForwardOptimizer for parameter optimization and validation.
- Added JSON results output for cross-pair validation results.
- Developed comprehensive tests for feature extraction and training processes in `test_features.py` and `test_train.py`.
- Included tests for loading historical data, preparing training data, and saving results.
- Enhanced error handling and validation checks in data loading and preparation functions.

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,7 @@
 markers =
     integration: integration tests that require external services
 asyncio_mode = auto
+filterwarnings =
+    ignore::pytest.PytestUnraisableExceptionWarning
+    ignore::RuntimeWarning
+    ignore::DeprecationWarning
