Add comprehensive unit and integration tests for TimeframeManager
- Implement tests for core functionality including symbol registration, removal, and retrieval.
- Validate data synchronization across multiple timeframes and timestamp alignment.
- Test handling of missing data, caching mechanisms, and cache expiration.
- Ensure proper integration with strategy signal generation and backward compatibility.
- Assess performance characteristics including data fetching speed and memory usage.
- Include error handling tests for connection failures, partial data fetching, and invalid symbols.
- Integrate health monitoring checks for the TimeframeManager component.

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,7 @@ tools/
 error.txt
 test_logs/
 scripts/
+README/
 
 
 # --- Machine Learning models ---
@@ -89,4 +90,4 @@ secrets.json
 *.rar
 *.tar
 *.gz
-*.md
+ENSEMBLE_README.models
