--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -9,6 +9,7 @@ pytest-cov==4.1.0
 pytest-mock==3.12.0
 pytest-xdist==3.5.0
 hypothesis==6.92.6
+psutil==5.9.0
 
 # Linting / Formatting / Type Checking
 black==23.12.1
