Refactor execution validation tests and add new scenarios
- Updated test for invalid lot size to use amount of 1.55 instead of 1.5.
- Added tests for valid lot size and zero lot size scenarios in TestExecutionValidator.
- Modified DiscordNotifier fixture to initialize and shutdown properly.
- Removed deprecated integration tests file for better organization.
- Enhanced signal_to_dict function to convert enum values for JSON serialization.
- Introduced Execution Types module with enums for execution policies and statuses.
- Added multiple metrics JSON reports for test strategy performance evaluation.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,7 @@
 [pytest]
 markers =
     integration: integration tests that require external services
+    discord_live: marks tests that hit real Discord webhook endpoints
 asyncio_mode = auto
 filterwarnings =
     ignore::pytest.PytestUnraisableExceptionWarning
