--- a/pytest.ini
+++ b/pytest.ini
@@ -3,8 +3,8 @@ pythonpath = .
 markers =
     integration: integration tests that require external services
     discord_live: marks tests that hit real Discord webhook endpoints
-asyncio_mode = auto
+asyncio_mode = strict
 filterwarnings =
-    ignore::pytest.PytestUnraisableExceptionWarning
-    ignore::RuntimeWarning
-    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
+    ignore::UserWarning
+addopts = --disable-warnings -p no:faulthandler
