--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,14 @@
 # ==========================================================
 
 # --- Core Dependencies ---
-ccxt==4.3.0
+ccxt==4.5.8
 pandas==2.2.3
 numpy==1.26.2
 python-dotenv==1.0.0
 pytest==8.3.2
 
 # --- Async & Networking ---
-aiohttp==3.9.0
+aiohttp==3.10.11
 requests==2.32.3
 websockets==12.0
 
@@ -42,6 +42,7 @@ arch==6.3.0
 colorama==0.4.6
 streamlit==1.28.0
 plotly==5.18.0
+matplotlib==3.8.4
 
 # --- Notifications ---
 discord.py==2.3.2
@@ -56,6 +57,9 @@ orjson==3.9.10
 deepmerge==1.1.0
 jsonschema==4.19.1
 pydantic==2.5.2
+schedule==1.2.1
+tqdm==4.66.5
+numba==0.59.1
 
 # --- Platform Specific (Windows only) ---
 pywin32==306; sys_platform == "win32"
